--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ fonttools==4.60.2
 fqdn==1.5.1
 frozendict==2.4.7
 h11==0.16.0
+html5lib==1.1
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
@@ -55,6 +56,7 @@ jupyterlab_server==2.28.0
 jupyterlab_widgets==3.0.16
 kiwisolver==1.4.7
 lark==1.3.1
+lxml==6.0.2
 MarkupSafe==3.0.3
 matplotlib==3.9.4
 matplotlib-inline==0.2.1
@@ -108,12 +110,12 @@ traitlets==5.14.3
 typing_extensions==4.15.0
 tzdata==2025.3
 uri-template==1.3.0
-urllib3==2.6.2
+urllib3==1.26.20
 wcwidth==0.2.14
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.9.0
 websockets==15.0.1
 widgetsnbextension==4.0.15
-yfinance==1.0
+yfinance==0.2.43
 zipp==3.23.0
